editor scrollbar fix

--- a/static/stylesheets/editor.css
+++ b/static/stylesheets/editor.css
@@ -1,7 +1,7 @@
 body{
     background: gray;
     overflow-y: hidden;
-    overflow-x: overlay;
+    overflow-x: scroll;
     height: 100%;
     margin: 0;
     display: flex;
